--- a/programs/program-roulette/Cargo.toml
+++ b/programs/program-roulette/Cargo.toml
@@ -15,10 +15,13 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+custom-heap = []
+custom-panic = []
+anchor-debug = []
 
 [dependencies]
-anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
-anchor-spl = "0.31.0" 
+anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
+anchor-spl = "0.31.1"
 sha2 = "0.10.8"
 bytemuck_derive = "=1.8.1"
 hex = "0.4.3"
