--- a/Anchor.toml
+++ b/Anchor.toml
@@ -11,6 +11,7 @@ url = "https://api.apr.dev"
 [provider]
 cluster = "devnet"
 wallet = "~/.config/solana/id.json"
+skip_program_id_check = true
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
