--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ resolver = "2"
 overflow-checks = true
 lto = "fat"
 codegen-units = 1
+opt-level = "z"
+strip = true
+panic = "abort"
+
 [profile.release.build-override]
 opt-level = 3
 incremental = false
